kubernetes/clusters/home-k3s/apps/comms/ergoircd/app/mariadb-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ergoircd-mariadb
  namespace: comms
  labels:
    app.kubernetes.io/name: ergoircd-mariadb
    app.kubernetes.io/instance: ergoircd
    app.kubernetes.io/part-of: ergoircd
    app.kubernetes.io/component: primary
    kustomize.toolkit.fluxcd.io/substitute: disabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: ergoircd
      app.kubernetes.io/name: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/instance: ergoircd
        app.kubernetes.io/part-of: ergoircd
        app.kubernetes.io/component: primary
    spec:
      containers:
        - name: mariadb
          image: ghcr.io/linuxserver/mariadb:11.4.8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          #        securityContext:
          #          runAsNonRoot: true
          #          runAsUser: 1000
          volumeMounts:
            - name: data
              mountPath: /config
      serviceAccount: default
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ergoircd-mariadb-data
